fixed a small alignment issue

--- a/Vintatge.Rabbit/Vintage.Rabbit.Web/Content/less/pages/theme.less
+++ b/Vintatge.Rabbit/Vintage.Rabbit.Web/Content/less/pages/theme.less
@@ -169,7 +169,7 @@
             .available-text { display: none;}
 
             .qty-container {
-                width: 30%;
+                width: 35%;
             }
 
             .add-to-cart-container {
